@@ -57,6 +57,7 @@
  -force		Force final newline when files are saved
  -nolocks	If you don't want file locks to be used
  -nobackups	If you don't want backup files to be created
+ -break_links	Delete file before writing, to break hard links
  -exask		^KX always confirms file name
 -beep		Beep on errors and when cursor goes past extremes
  -nosta		Disable top-most status line
