@@ -65,6 +65,8 @@
 
  -nobackups	If you don't want backup files to be created
 
+ -break_links	Delete file before writing, to break hard links
+
 -exask		^KX always confirms file name
 
  -beep		Beep on errors and when cursor goes past extremes
