@@ -63,6 +63,8 @@
 
  -nobackups	If you don't want backup files to be created
 
+ -break_links	Delete file before writing, to break hard links
+
  -lightoff	Turn off highlighting after block copy or move
 
  -exask		^KX always confirms file name
