@@ -1,9 +1,12 @@
 JOE 3.2
 
-- A perforce "p4 edit" macro has been supplied (along with the hooks
+- A Perforce SCM "p4 edit" macro has been supplied (along with the hooks
   within JOE which support it) so that when you make the first change to a
   read-only file, JOE runs "p4 edit".  (look in joerc file to enable the
   macro).
+
+- New '-break_links' option causes JOE to delete before writing files, to
+  break hard links.  Useful for 'arch' SCM.
 
 - JOE now has GNU-Emacs compatible file locks.  A symbolic link called
   .#name is created, "pointing" to "user@machine.pid" whenever the buffer
@@ -47,7 +50,8 @@ JOE 3.2
   understanding word and balanced delimiters.
 
 - Many bugs have been fixed (every bug which has been entered into the
-  sourceforge project page has been addressed).
+  sourceforge project page has been addressed).  Hopefully I didn't add
+  too many new ones :-)
 
 JOE 3.1
 
